# aow-bike-sim

./: .gitignore  README.md  pyproject.toml
config/: bike_params.yaml  rl_ball.yaml  rl_ball_base.yaml  rl_flick.yaml
docs/measurements/: omni-wheel-measurements.yaml  omni-wheel-protocol.md
docs/plans/: agility-turn-180-move.md  ball-shot-move.md  mujoco-modeling-decisions.md  pivot-controller.md  prelim-architecture.md  sharper-turns-stage-1.md  stationary-balance-controller.md
docs/robotis/: xc330-t181 _ ROBOTIS Docs.html  xc430-w150 _ ROBOTIS Docs.html
docs/robotis/xc330-t181 _ ROBOTIS Docs_files/: runtime~main.f21d8475.js
docs/robotis/xc430-w150 _ ROBOTIS Docs_files/: main.c0d11ced.js  styles.2710c9d0.css
moves/: ball_rl.npz  ball_rl.yaml  flick.yaml  flick_fwd.yaml  flick_rl.npz  flick_rl.yaml
src/aow_sim/: build_model.py  geometry.py  interactive.py  optimize_flick.py  run_balance.py  run_drive.py  run_pivot.py  train_ball_rl.py  train_flick_rl.py  view.py
src/aow_sim/control/: __init__.py  balance.py  ball_env.py  ball_spec.py  drive.py  flick.py  flick_env.py  flick_spec.py  linearize.py  pivot.py  policy.py
tests/: test_balance.py  test_ball_rl.py  test_drive.py  test_model.py  test_pivot.py  test_rl.py
