[project]
name = "aow-sim"
version = "0.1.0"
description = "MuJoCo simulation of an active omni wheel (AOW) RC bike"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aow_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
